Fixing line height for topnav on mobile.

--- a/personal_style_mobile.css
+++ b/personal_style_mobile.css
@@ -47,6 +47,7 @@ body{
 	font-family: "Century Gothic", sans-serif;
 	font-weight: 100;
 	font-size: 16px;
+	line-height: 22pt;
 	letter-spacing: 1px;
 	color: white;
 
